syntax = "proto3";

package sifnode.oracle.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/oracle/types";

// NetworkID is a unique identifier for all chains that Sifchain
// enables.
enum NetworkID {
  // Not currently in use
  NETWORK_ID_UNSPECIFIED = 0;
  // https://ethereum.org
  NETWORK_ID_ETHEREUM = 1;
  // Bitcoin mainnet
  NETWORK_ID_BITCOIN = 2;
  // https://github.com/ethereum/ropsten
  NETWORK_ID_ETHEREUM_TESTNET_ROPSTEN = 3;
  // https://www.binance.org
  NETWORK_ID_BINANCE_SMART_CHAIN = 56;
  // https://testnet.binance.org/
  NETWORK_ID_BINANCE_SMART_CHAIN_TESTNET = 97;
  // Ganache local testnet
  NETWORK_ID_GANACHE = 5777;
}
